# qt_world_summit_2019_cmake_vcpkg_app

./: .gitignore  CMakeLists.txt  Info.plist  Info_ios.plist.in  LICENSE.md  README.md  documenthandler.cpp  documenthandler.h  texteditor.cpp  texteditor.html
+touch/: texteditor.html
cmake/: FindBotan.cmake  app_utils.cmake
my_build_scripts/: build_android_device.sh  build_android_emulator.sh  build_ios_device.sh  build_ios_simulator.sh  build_linux.sh  build_mac.sh  build_win.bat
qml/: texteditor.qml
qml/+touch/: texteditor.qml
